--- a/UseCases.Test/UseCases.Test.csproj
+++ b/UseCases.Test/UseCases.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\UseCases.Implementations\UseCases.Implementations.csproj" />
   </ItemGroup>
 
 </Project>
