--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataAccess.EFCore\DataAccess.EFCore.csproj" />
     <ProjectReference Include="..\DataAccess.Interfaces\DataAccess.Interfaces.csproj" />
-    <ProjectReference Include="..\DataAccess\DataAccess.EFCore.csproj" />
     <ProjectReference Include="..\Server\Server.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
     <ProjectReference Include="..\UseCases.Implementations\UseCases.Implementations.csproj" />
