auth controller and related stuff, user service can create user now OMG

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Auth.Interfaces\Auth.Interfaces.csproj" />
     <ProjectReference Include="..\UseCases.Interfaces\UseCases.Interfaces.csproj" />
   </ItemGroup>
 
